<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/custo_do_sercico"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/custo_do_servi_o"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pergunta_do_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_foi_o_servi_o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custo_do_sercico" />

    <RadioGroup
        android:id="@+id/tip_opicoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_20"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pergunta_do_servico">

        <RadioButton
            android:id="@+id/option_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfeito_20" />

        <RadioButton
            android:id="@+id/option_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muito_bom_18" />

        <RadioButton
            android:id="@+id/option_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legal_15" />

    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/arredondar_gorjeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_opicoes" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_button" />


</androidx.constraintlayout.widget.ConstraintLayout>